Fix owner panel btns overflow in Safari

--- a/src/components/OwnerPanel/styles.module.scss
+++ b/src/components/OwnerPanel/styles.module.scss
@@ -45,6 +45,7 @@ $container-size: 160px;
 
   @include for-phone-only {
     row-gap: 27px;
+    column-gap: 12px;
   }
 }
 
@@ -54,16 +55,22 @@ $container-size: 160px;
   font-size: 16px;
   letter-spacing: 0.05em;
   cursor: pointer;
-  min-width: auto;
-  white-space: nowrap;
 
   &.moreThanTwoButtons,
   &:only-child {
     grid-column: 1 / span 2;
   }
 
+  &,
+  &:active,
+  &:hover {
+    min-width: auto;
+  }
+
   @include for-phone-only {
     font-size: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
